--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-Cambio otro
-Cambio desde github
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Titulo de página</h1>
+</body>
+</html>
