Update index.html añadidos estilos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style href="miestilo.css">
 <body>
     <h1>Titulo de página</h1>
     <h1>Otra pagina</h1>
