--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<style href="miestilo.css">
+<style href="miestilo.css"></style>
 <body>
     <h1>Titulo de página</h1>
     <h1>Otra pagina</h1>
