--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Titulo de página</h1>
     <h1>Otra pagina</h1>
     <p>Y ahora un párrafo</p>
+    <p>Y ahora otro párrafo</p>
 </body>
 </html>
